--- a/src/webparts/newMro/CSS/left-nav.css
+++ b/src/webparts/newMro/CSS/left-nav.css
@@ -158,3 +158,127 @@ color: #666666!important;
   -o-transition: all .3s;
   transition: all .3s;
 }
+/*side nav collapse for tablet sceens*/
+@media only screen and (max-width: 796px) {
+  .menu-hide .sidebar{
+   display: none;
+}
+.menu-icon-outer {
+   display: inline-block!important;
+}
+}
+.menu-hide .menu-icon-outer {
+top: 12px;
+left: 2px;
+background-color: #ffffff;
+width: 36px;
+padding: 9px;
+height: 32px;
+border-radius: 3px;
+box-shadow: 3px 3px 12px #2d2d2d;
+}
+#content{
+position: relative;
+}
+.menu-icon-outer {
+display: none;
+top: 22px;
+left: -30px;
+position: absolute;
+z-index: 99999;
+margin-top: -10px;
+cursor: pointer;
+}
+.menu-hide .menu-icon {
+-o-transform: rotate(0deg);
+transform: rotate(0deg);
+}
+.menu-hide .menu-icon span {
+display: block;
+position: absolute;
+height: 3px;
+width: 100%!important;
+background: #000000;
+border-radius: 9px;
+opacity: 1!important;
+left: 0!important;
+-webkit-transform: rotate(0deg)!important;
+-moz-transform: rotate(0deg)!important;
+-o-transform: rotate(0deg)!important;
+transform: rotate(0deg)!important;
+-webkit-transition: .25s ease-in-out;
+-moz-transition: .25s ease-in-out;
+-o-transition: .25s ease-in-out;
+transition: .25s ease-in-out;
+}
+
+.menu-hide .menu-icon span:nth-child(1) {
+top: 0px;
+-webkit-transform-origin: left center;
+-moz-transform-origin: left center;
+-o-transform-origin: left center;
+transform-origin: left center;
+}
+.menu-hide .menu-icon span:nth-child(2) {
+top: 6px;
+-webkit-transform-origin: left center;
+-moz-transform-origin: left center;
+-o-transform-origin: left center;
+transform-origin: left center;
+}
+.menu-hide .menu-icon span:nth-child(3) {
+top: 12px;
+-webkit-transform-origin: left center;
+-moz-transform-origin: left center;
+-o-transform-origin: left center;
+transform-origin: left center;
+}
+.menu-icon{
+width: 17px;
+height: 30px;
+display: inline-block;
+position: absolute;
+-moz-transform: rotate(0deg);
+-o-transform: rotate(0deg);
+transform: rotate(0deg);
+cursor: pointer;
+}
+.menu-icon span {
+display: block;
+position: absolute;
+height: 3px;
+width: 100%;
+background: #000000;
+border-radius: 9px;
+opacity: 1;
+left: 0;
+-webkit-transform: rotate(0deg);
+-moz-transform: rotate(0deg);
+-o-transform: rotate(0deg);
+transform: rotate(0deg);
+-webkit-transition: .25s ease-in-out;
+-moz-transition: .25s ease-in-out;
+-o-transition: .25s ease-in-out;
+transition: .25s ease-in-out;
+}
+.menu-icon span:nth-child(1) {
+-webkit-transform: rotate(45deg);
+-moz-transform: rotate(45deg);
+-o-transform: rotate(45deg);
+transform: rotate(45deg);
+top: 0px;
+left: 8px;
+}
+.menu-icon span:nth-child(2) {
+width: 0%;
+opacity: 0;
+}
+.menu-icon span:nth-child(3) {
+-webkit-transform: rotate(-45deg);
+-moz-transform: rotate(-45deg);
+-o-transform: rotate(-45deg);
+transform: rotate(-45deg);
+   top: 0px;
+left: 8px;
+}
+/*End*/
