1. Added validations for Multiple People picker in Employee master 2.  Employee Master View

--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -2086,10 +2086,10 @@ li {
   display: none;
 }
 
-#divAddNewWeeklyTimeSheet{
+#divAddNewWeeklyTimeSheet,#divAddNewEmployeeMaster{
   position: relative;
 }
-#newWeeklyTimeSheet{
+#newWeeklyTimeSheet,#newEmployeeMasterForm{
   position: absolute;
   right: 10px;
   top: -70px;
