--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -679,12 +679,31 @@ a{
 .light-text label{
   position: absolute;
   /* top: -2px; */
-  /* top: -11px; */
+  top: -11px;
   left: 6px;
   padding: 0 5px;
   background-color: white;
   z-index: 1;
   font-size: 14px;
+}
+/* #chkIsActive{
+  position: absolute;
+  top: -2px;
+   top: 0px;
+  left: 15px;
+  padding: 0 5px;
+  background-color: white;
+  z-index: 1;
+  font-size: 14px;
+} */
+.divIsActive{
+  display: flex !important;
+  width: 150px !important;
+}
+#lblIsActive{
+position: relative !important;
+width: 100px !important;
+top: 0px !important;
 }
 label{
   /* color: #572ba7; */
