--- a/src/webparts/newMro/CSS/WeeklyTimesheet.css
+++ b/src/webparts/newMro/CSS/WeeklyTimesheet.css
@@ -181,13 +181,13 @@
      text-align: left;
     }
     .clientName {
-        position: relative;
-        left: 25px;
-        width: 150px;
+        position: relative !important;
+        left: 25px !important;
+        width: 150px !important;
     }
 
     .div-readOnly {
-        position: relative;
-        left: 40px;
-        width: 150px;
+        position: relative !important;
+        left: 40px !important;
+        width: 150px !important;
     }
