--- a/src/webparts/newMro/CSS/WeeklyTimesheet.css
+++ b/src/webparts/newMro/CSS/WeeklyTimesheet.css
@@ -41,7 +41,7 @@
         height: 24px;
         text-align: center;
         border-radius: 50%;
-        background: #0D2F4B;;
+        background: #0D2F4B;
         color: white;
         font-size: 14px;
         padding-top: 2px;
