--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -1120,7 +1120,7 @@ a:active {
   -webkit-border-radius: 0px;             
 }
 .SubmitButtons:hover{
-  background: #383b8e;
+  background: #0D2F4B;
   color: #ffffff;
 }
 .ApproveButtons{
