ALL requests component and CSS changes

--- a/src/webparts/newMro/CSS/left-nav.css
+++ b/src/webparts/newMro/CSS/left-nav.css
@@ -45,6 +45,16 @@ color: #666666!important;
 .ul-leftnav li{
   list-style-type: none;
   padding: 4px 6px;
+  display: inline-block;
+  font-size: 1rem;
+  color: #444;
+  font-weight: bold;
+}
+.ul-leftnav li a{
+  color: #444 !important;
+  text-decoration-line: none !important;
+  font-size: 1rem !important;
+  font-weight: bold !important;
 }
 .ul-leftnav li a:hover{
   background-color: rgba(197,233,234,.5);
