--- a/src/webparts/newMro/CSS/WeeklyTimesheet.css
+++ b/src/webparts/newMro/CSS/WeeklyTimesheet.css
@@ -72,7 +72,8 @@
 
     .text-start{
         text-align: left;
-        background-color: #DEF1FF;
+        /* background-color: #DEF1FF; */
+        background-color: transparent;
     }
     .day {
         display: block;
@@ -117,8 +118,7 @@
     }
     span.c-badge {
             /* background: #dfce8d; */
-            /* background: #def1ff; */
-            background: transparent;
+            background: #def1ff;
             padding: 3px 6px;
             border-radius: 5px;
             min-width: 35px;
