--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -183,6 +183,7 @@
   width: 100%;
   left: -10px;
   top: 10px;
+  font-weight: bold;
 }
 .after-title {
   margin: 60px 0;
@@ -246,6 +247,7 @@ margin-bottom: 1.5rem;
   border-radius: 0!important;
   font-weight: bold;
   text-align: center;
+  text-align: left;
 }
 .border-dashed{
   border: 2px dashed rgba(0, 128, 180, 0.50);      
