--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -2329,7 +2329,12 @@ li {
 }
 
 .bRirNn{
-  font-size: 1.0rem !important;
+  font-size: 16px !important;
+}
+
+.lkrJOt{
+  font-family: sans-serif !important;
+  font-size: 13px !important;
 }
 
   /* .tabsBackground{
