--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -2337,6 +2337,9 @@ li {
   font-size: 13px !important;
 }
 
+.Sun,.Sat{
+  color: rgb(241, 94, 94);
+}
   /* .tabsBackground{
     background-color: #0D2F4B !important;
     color: #ffff !important;
