--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -2343,6 +2343,9 @@ li {
 #s4-workspace{
   font-family: Verdana, Geneva, Tahoma, sans-serif !important;
 }
+.iconApprove,.iconReject{
+  cursor: pointer;
+}
   /* .tabsBackground{
     background-color: #0D2F4B !important;
     color: #ffff !important;
