Employee Master changes

--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -1901,7 +1901,7 @@ left: 47.5%;
 top: 43.5%;
 }
 .bc-dblue {
-  background-color: #4597D3!important;
+  background-color: #0D2F4B!important;
 }
 .bc-burgundy {
   background-color: rgb(109, 61, 76)!important;
@@ -1987,7 +1987,7 @@ top: 43.5%;
     color: #ffffff; */
     background: #ffffff;
     color: #0D2F4B;
-    border: 2px solid #686abf;
+    border: 2px solid #0D2F4B;
 }
 #contentBox {
   margin-left: 10px!important;
