--- a/src/webparts/newMro/CSS/WeeklyTimesheet.css
+++ b/src/webparts/newMro/CSS/WeeklyTimesheet.css
@@ -217,4 +217,8 @@
         left: 40px !important;
         width: 150px !important;
     }
+    .ClientHoliday
+    {
+        color:crimson;
+    }
 
